changed pom.xml, Procfile

--- a/meteo/pom.xml
+++ b/meteo/pom.xml
@@ -115,6 +115,19 @@
                 </executions>
             </plugin>
             
+            <plugin>
+        <groupId>com.heroku.sdk</groupId>
+        <artifactId>heroku-maven-plugin</artifactId>
+        <version>2.0.8</version>
+        <configuration>
+            <appName>meteo-bot-filippovich</appName>
+            <processTypes>
+                <worker>
+                    java $JAVA_OPTS -cp target/classes:target/dependency/bot.telegram.Bot
+                </worker>
+            </processTypes>
+        </configuration>
+    </plugin>
         </plugins>
     </build>
 
